--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "clientBuild": "cd client && npm run build",
+    "start": "npm run clientBuild && nodemon server.js"
   },
   "repository": {
     "type": "git",
