--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "software_security_web_app_lennert_vanden_Herrewegen",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "software-security-web-app-lennert-vanden-herrewegen-backend-1",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheMrL14/software_security_web_app_lennert_vanden_Herrewegen.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TheMrL14/software_security_web_app_lennert_vanden_Herrewegen/issues"
-  },
-  "homepage": "https://github.com/TheMrL14/software_security_web_app_lennert_vanden_Herrewegen#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.0.2",
-    "nodemon": "^2.0.7",
-    "path": "^0.12.7",
-    "sass": "^1.32.4"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
