--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
     "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
-    "jade": "^1.11.0",
+    "jade": "^0.31.2",
+    "jwks-rsa": "^1.12.2",
     "mysql": "latest",
     "path": "^0.12.7"
   }
