--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jade": "^0.31.2",
     "jwks-rsa": "^1.12.2",
     "mysql": "latest",
-    "path": "^0.12.7"
+    "njwt": "^1.0.0",
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
